welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: not found: value sleepln
	sleepln==false
        ^sleepIn:9: error: not found: value sleepln
		sleepln==false
                ^sleepIn:11: error: not found: value sleepln
		sleepln==true
                ^